<resources>
    <string name="app_name">Way Vista</string>
    <string name="way_vista">Way Vista</string>
    <string name="introimg">IntroImg</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="newAc">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signInAc">Already Have An Account</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="way_vista_description"> ➮ WayVista is a cutting-edge location tracking application designed to enhance your navigation experience. With advanced features and user-friendly interface, WayVista provides seamless access to your location data and empowers you to explore the world around you with confidence.</string>
    <string name="about_us">About Us</string>


</resources>